syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "io.dolby.rtsviewer.datastore";
option java_multiple_files = true;

message StreamDetail {
  string accountID = 1;
  string streamName = 2;
  bool useDevEnv = 3;
  bool forcePlayOutDelay = 4;
  bool disableAudio = 5;
  bool rtcLogs = 6;
  int32 videoJitterMinimumDelayMs = 7;
  google.protobuf.Timestamp lastUsedDate = 8;
}

message RecentStreams {
  repeated StreamDetail streamDetail = 1;
}